objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Base_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to have product show on a POA related list &quot;Base Asset&quot;</inlineHelpText>
        <label>Base Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Type_Indicator__c</fullName>
        <description>Used by Flow to populate the Billing Type field on Account. Should only be assigned to the main associated product. (e.g. Website should be assigned on Kore360 Website, but not on AIS Rebates - Website Integration)</description>
        <inlineHelpText>Used by Flow to populate the Billing Type field on Account. Should only be assigned to the main associated product. (e.g. Website should be assigned on Kore360 Website, but not on AIS Rebates - Website Integration)</inlineHelpText>
        <label>Billing Type Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProVision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Genius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Product_No_Cost_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want the price of the child product to be full list price</inlineHelpText>
        <label>Child Product No Cost Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Children__c</fullName>
        <label>Core Children</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Factor__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>***ADMIN ONLY***

Cost Factor for packages.  Should default to 1.</description>
        <label>Cost Factor</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Product__c</fullName>
        <formula>IF( CONTAINS( Name , &quot;Credit&quot;) , &quot;YES&quot;, &quot;NO&quot;)</formula>
        <label>Credit Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM Solution</label>
        <referenceTo>DMAPP__AM_Solution__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The price on this product cannot be changed if this is checked. Price Adjustment will skip this product.</description>
        <inlineHelpText>The price on this product cannot be changed if this is checked. Price Adjustment will skip this product.</inlineHelpText>
        <label>Disable Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpPaidByDealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExpPaidByDealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cost to ship product</description>
        <inlineHelpText>Cost to ship product</inlineHelpText>
        <label>Freight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this is a Fulfillment product.</description>
        <inlineHelpText>Check if this is a Fulfillment product.</inlineHelpText>
        <label>Fulfillment Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grouping_Category__c</fullName>
        <inlineHelpText>this field can be used when reporting on Product Sold by a Grouping Category at the Opportunity level</inlineHelpText>
        <label>Grouping Category</label>
        <picklist>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Third Party Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMM/SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This product is a hardware product</description>
        <inlineHelpText>Check this box if this is a hardware product</inlineHelpText>
        <label>Hardware Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_is_Billing_End_Date_Set__c</fullName>
        <label>How is Billing End Date Set?</label>
        <picklist>
            <picklistValues>
                <fullName>One Time - (Vin) same as start date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Up Fee (vAuto) - start date plus 366 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Fee (vAuto) - start date plus 366 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring (Vin) - Created Date + 180 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring (vAuto) - Active Date or set by Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_is_Start_Date_Set__c</fullName>
        <label>How is Billling Start Date Set?</label>
        <picklist>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date plus 180 days (Vin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring -Manaul (vAuto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Fees - Created Date (vAuto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Fees - Created Date (Vin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time - Created Date (Vin-No Imp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time - Created Date + 180 days (Vin Imp Req&apos;d)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_the_2013_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In the 2013 Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_the_2014_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this product is in the 2014 Standard Price Book. This is set manually, so be sure you check it if you add something to this price book!</inlineHelpText>
        <label>In the 2014 Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_the_Fulfillment_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this product is in the Fulfillment price book. This is set manually, so be sure you check it if you add something to this price book!</inlineHelpText>
        <label>In the Fulfillment Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that content related to this product will be populated on the Tinderbox proposal.</inlineHelpText>
        <label>Include Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Cost__c</fullName>
        <description>Internal Cost of Goods Sold</description>
        <label>Internal Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsPackageParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product is considered to be a parent product for a package (i.e. Bronze 2 is a parent product)</description>
        <inlineHelpText>If checked, this product is considered to be a parent product for a package (i.e. Bronze 2 is a parent product)</inlineHelpText>
        <label>IsPackageParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Days__c</fullName>
        <inlineHelpText>The number of days of training this particular product is for. Only used for Training products. Do not include with packages.</inlineHelpText>
        <label>Number of Training Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackageNotForTinderbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a MINOR package. Used by Tinderbox to determine if a product should be the main package that prices are lumped under in the Tinderbox pricing page. Also used by Pre-2013PB Worth to determine which is the major package.</description>
        <label>PackageNotForTinderbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Discount_Percentage__c</fullName>
        <label>Package Discount Percentage</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Package_Group__c</fullName>
        <inlineHelpText>used for reporting</inlineHelpText>
        <label>Package Group</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nickel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Value__c</fullName>
        <description>Does not actually affect package pricing. Only used for reference by Tinderbox and sales reps.</description>
        <inlineHelpText>Does not actually affect package pricing. Only used for reference by Tinderbox and sales reps.</inlineHelpText>
        <label>Package Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Inventory with Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Inventory with Website and MPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest with Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Ala Carte Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Limited Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Limited Users Ala Carte Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Desking Limited Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Desking Upgrade from ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Desking Upgr from ILM Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Desking with Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Desking with Website Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Limited User Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus MPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus MPT Limited Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus MPT with Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus MPT with Website Limited Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Upgrade Limited User Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Upgrade Package TRUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Premier Limited Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Pro Limited Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Pro with Website</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pass_Thru_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked this monthly recurring fee is not imcluded in the mrr because it is a pass through charge to a third party</inlineHelpText>
        <label>Pass Thru Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phased_Implementation_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to denote this product will create a Phased Implementation Project</description>
        <inlineHelpText>Checkbox to denote this product will create a Phased Implementation Project</inlineHelpText>
        <label>Phased Implementation Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProdProj_Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Default Owner of the Product Projects that will be generated for this product. A Project Piece will only be generated for this Product if this field is filled in.</description>
        <inlineHelpText>The Default Owner of the Product Projects that will be generated for this product. A Project Piece will only be generated for this Product if this field is filled in.</inlineHelpText>
        <label>ProdProj Default Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProdProj_Dept2_OwnerID__c</fullName>
        <label>ProdProj Dept2 OwnerID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdProj_Dept2_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProdProj Dept2 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProdProj_Dept3_OwnerID__c</fullName>
        <label>ProdProj Dept3 OwnerID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdProj_Dept3_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProdProj Dept3 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPicture__c</fullName>
        <formula>IMAGE(  URL_Picture__c  , &apos;Product Picture&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BU__c</fullName>
        <label>Product BU</label>
        <picklist>
            <picklistValues>
                <fullName>ATC Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Suite__c</fullName>
        <description>Allows this product to be managed by Performance Management in POAs.</description>
        <inlineHelpText>Allows this product to be managed by Performance Management in POAs.</inlineHelpText>
        <label>Product Suite</label>
        <picklist>
            <picklistValues>
                <fullName>Auction Genius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit - Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit - Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genius Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB PAR New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB PAR Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo - Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo - Genius Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo - Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup - Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup - Genius Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup - Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stockwave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Department2__c</fullName>
        <label>Production Department2</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Click to Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - Custom Form Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700 Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIS Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Gallery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KnowMe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training (WebEx/Internet)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Department3__c</fullName>
        <label>Production Department3</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Click to Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - Custom Form Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700 Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIS Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Gallery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KnowMe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training (WebEx/Internet)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Department__c</fullName>
        <label>Production Department</label>
        <picklist>
            <picklistValues>
                <fullName>700 Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIS Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - VinVideos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Gallery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KnowMe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search &amp; Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - Custom Form Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training (WebEx/Internet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Issue2__c</fullName>
        <label>Production Issue2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Issue3__c</fullName>
        <label>Production Issue3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Issue__c</fullName>
        <label>Production Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This feild will control which project will be created</description>
        <label>Project Definition</label>
        <referenceTo>Project_Definition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Separation__c</fullName>
        <description>Indicates how the products will be split into separate projects.</description>
        <formula>CASE(ProdProj_Default_Owner__r.User_Full_Name__c, 
   &quot;Rebecca Villa&quot;, 
      &quot;Websites&quot;, 
   &quot;Lindsey Trickey&quot;,
      &quot;Websites&quot;,
   &quot;Vanessa Chaviano&quot;,
      &quot;Websites&quot;,
   &quot;Patrick Ahl&quot;,
      &quot;Websites&quot;,
   &quot;Shelby Oaks&quot;,
      &quot;Websites&quot;,
   &quot;Implementation&quot;
)</formula>
        <inlineHelpText>Indicates how the products will be split into separate projects.</inlineHelpText>
        <label>Project Separation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Description__c</fullName>
        <label>Proposal Description</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
</CustomObject>